--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,3 +1,16 @@
+.container{
+  margin: 20px auto;
+  max-width: 1080px;
+}
+
+.pcity{
+  /* padding-top: 120px; */
+  text-align: center;
+  font-size: 30px;
+  font-weight: 700;
+  color: #262626;
+}
+
 .navigation{
   margin: 10px;
   border-radius: 10px;
@@ -10,16 +23,8 @@
 }
 
 .container{
-  max-width: 1080px;
   margin: 20px auto;
-}
-
-.pcity{
-  /* padding-top: 120px; */
-  text-align: center;
-  font-size: 30px;
-  font-weight: 700;
-  color: #262626;
+  max-width: 1080px;
 }
 
 @media (width < 600px) {
